--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-iframe": "^1.1.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,6 +20,6 @@
   },
   "devDependencies": {
     "@types/node": "^10.1.2",
-    "gh-pages": "^1.1.0"
+    "gh-pages": "^2.0.1"
   }
 }
